# Remote-AD-IO-Block

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/i2c_manager/i2c_manager/: Kconfig
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/include/: Board.h  COMMON.h  Communicator.h  Exceptions.h  GenSignal.h  Generator.h  Interpreter.h  InterpreterLUT.h  MCP230XX.h  MCP3XXX.h  MCP3x0x copy.h  MCP3x0x.h  MCP4XXX.h  SocketIStream.h  SocketOStream.h  SocketReader.h  adc_task.h  big_buffer.h  concurrent_queue.h  connection_hdlr.h  ethernet.h  exchange_hdlr.h  json_helper.h  mcp23008.h  settings.h  socket_helper.h  to_floating_point.h  to_integer.h  webserver.h  wifi.h
main/include/msd/: channel.hpp
main/src/: Board.cpp  Communicator.cpp  GenSignal.cpp  Generator.cpp  Interpreter.cpp  adc_task.cpp  connection_hdlr.cpp  ethernet.cpp  exchange_hdlr.cpp  json_helper.cpp  mcp23008.c  socket_helper.cpp  webserver.cpp  wifi.cpp
